<resources>
    <string name="app_name">P03-ClassJournal</string>
    <string name="info">Info</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="dg">DG</string>
    <string name="textView">TextView</string>
    <string name="submit">Submit</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="x">X</string>
</resources>
